--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,4 @@ jobs:
       with:
         node-version: 14
         cache: 'npm'
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm run build
