--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "sass": "^1.39.0",
         "sass-loader": "^10.2.0",
         "vue": "^3.0.0",
+        "vue-cookies": "^1.7.4",
         "vue-router": "^4.0.11",
+        "vue3-cookies": "^1.0.1",
         "vuex": "^4.0.2"
     },
     "devDependencies": {
